# nku-2-2homework

./: CMakeLists.txt  README.md  SoundManager.cpp  SoundManager.h  algaecell.cpp  algaecell.h  algaegame.cpp  algaegame.h  algaegame_forward.h  algaeplus.pro  algaetype.cpp  algaetype.h  gamegrid.cpp  gamegrid.h  gameresources.cpp  gameresources.h  gridcell.h  image.qrc  mainwindow.cpp  mainwindow.h  resources.qrc  sound.qrc  大作业实验报告.docx
